--- a/index.html
+++ b/index.html
@@ -40,11 +40,16 @@
         <input type="button" value="Add" onclick="addToTable(); counter();">
     </div>
     <div>
-        <table id="output">
+        <table>
+            <thead>
             <th style="width:40%;">Title</th>
             <th style="width:40%;">Author</th>
             <th style="width:10%;">Type</th>
             <th style="width:10%;">Button</th>
+            </thead>
+            <tbody  id="output">
+
+            </tbody>
         </table>
     </div>
     <div>
