--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
         </table>
     </div>
+    <footer>Source code: <a>https://github.com/MilanTrpchevski/ip</a></footer>
     <script>
         var title = document.getElementById("title");
         var author = document.getElementById("author");
