--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         </table>
     </div>
-    <footer>Source code: <a>https://github.com/MilanTrpchevski/ip</a></footer>
+    <div>Source code: <a>https://github.com/MilanTrpchevski/ip</a></div>
     <script>
         var title = document.getElementById("title");
         var author = document.getElementById("author");
